--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
         <header>
             <div class="boyGeneral bobyHeader">
-                <img class="logo" src="IMG/logo.PNG">
+                <div class="logo"></div>
                 <div class="cajaMenu"><p class="texto"> SUPERHÉROES DE MARVEL </p></div>
             </div>
         </header>
