--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="CSS/css.css">
+       <link href="https://fonts.googleapis.com/css2?family=Handlee&display=swap" rel="stylesheet">
          <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <meta name="viewport" content="width = device-width, initial-scale = 1.0">
     </head>
@@ -16,26 +17,26 @@
         <section>
             <div class="boyGeneral section">
                 <div class="contenido">
-                    <img class="img" src="IMG/super11.jpg">
+                    <div class="img"></div>
                     <div class="titulo"><p class="texto1"> Capitán América</p></div>
                     <div class="parrafo">El Capitán América fue diseñado como un supersoldado patriota que luchaba frecuentemente contra las potencias del Eje en la Segunda Guerra Mundial, y fue el personaje más popular de Timely Comics durante el período de guerra. </div>
 
                 </div>
 
                 <div class="contenido">
-                    <img class="img" src="IMG/super22.jpg">
+                    <div class="img1" ></div>
                     <div class="titulo"><p class="texto1"> Iron Man</p></div>
                     <div class="parrafo">Un multimillonario magnate empresarial e ingenioso científico, quien sufre por un secuestro. Cuando sus captores intentan forzarlo a construir un arma de destrucción masiva crea, en cambio, una armadura poderosa para salvar su vida y escapar del cautiverio.</div>
                 </div>
 
                 <div class="contenido">
-                    <img class="img" src="IMG/super33.jpg">
+                    <div class="img2"></div>
                     <div class="titulo"><p class="texto1"> Black Widow</p></div>
                     <div class="parrafo">Al nacer, la Viuda Negra, también conocida como Natasha Romanova, se entrega a la KGB para convertirse en su agente definitivo. Cuando la URSS se separa, el gobierno intenta matarla mientras la acción se traslada a la actual Nueva York.</div>
                 </div>
 
                 <div class="contenido">
-                    <img class="img" src="IMG/super4.jpg">
+                    <div class="img3"></div>
                     <div class="titulo"><p class="texto1"> Thor</p></div>
                     <div class="parrafo">Es un superhéroe ficticio que se basa en la deidad nórdica, es el dios del trueno asgardiano poseedor del martillo encantado, Mjolnir, que le otorga la capacidad de volar y manipular el clima entre sus otros atributos sobrehumanos.</div>
                 </div>
